# wednesday-frog

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  compose.ha.yaml  compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: security-audit.yml  tests.yml
src/wednesday_frog/: __init__.py  __main__.py  assets.py  config.py  db.py  http_client.py  logging_utils.py  metrics.py  models.py  schedule_coordination.py  scheduler.py  security.py  services.py  web.py
src/wednesday_frog/delivery/: __init__.py  base.py  discord.py  mattermost.py  slack.py  teams.py  zoom.py
src/wednesday_frog/plugins/: __init__.py  base.py  manager.py
src/wednesday_frog/plugins/discord/: manifest.json  plugin.py
src/wednesday_frog/plugins/mattermost/: __init__.py  manifest.json  plugin.py
src/wednesday_frog/plugins/slack/: __init__.py  manifest.json  plugin.py
src/wednesday_frog/plugins/teams/: __init__.py  manifest.json  plugin.py
src/wednesday_frog/plugins/zoom/: __init__.py  manifest.json  plugin.py
static/: app.js  style.css
templates/: account.html  base.html  dashboard.html  destination_detail.html  destinations.html  history.html  login.html  settings.html  setup.html  test.html  user_detail.html  users.html
tests/: conftest.py  test_app.py
